# test_load

./: .env.template  .gitignore  db.py  main.py  pyproject.toml
models/: dict_city_vacancy.py  raw_av_vacancy.py
repositories/: dict_city_vacancy.py  faas_requester.py  raw_av_vacancy.py
scrappers/: vacancy_scrapper.py
tests/: tests.py
