[tool.poetry]
name = "hr_sstats"
version = "0.1.0"
description = ""
authors = ["Артем Готин <aremgotin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
fake-useragent = "^2.2.0"
curl-cffi = "^0.11.4"
ua-parser = "^1.0.1"
beautifulsoup4 = "^4.13.4"
playwright = "^1.53.0"
undetected-chromedriver = "^3.5.5"
setuptools = "^80.9.0"
webdriver-manager = "^4.0.2"
blinker = "1.7.0"
selenium-wire = "^5.1.0"
psycopg2 = "^2.9.10"
cloudscraper = "^1.2.71"
pydantic = "^2.11.7"
sqlalchemy = "^2.0.41"
pandas = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
